components/navigation/menu.module.css
.header {
  position: fixed;
  top: 1rem;
  right: 1rem;
  z-index: 1000;
}

.menu {
  width: 3rem;
  height: 3rem;
  border-radius: 50%;
  background-color: rgba(255, 255, 255, 0.8);
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  transition: width 0.2s ease, height 0.2s ease;
}

.menu:hover,
.menu.active {
  width: 3.25rem;
  height: 3.25rem;
  background-color: rgba(255, 255, 255, 1);
}

.navMenu {
  position: fixed;
  top: 4.25rem;
  right: 10px;
  background-color: rgba(255, 255, 255, 1);
  border-radius: 8px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  width: max-content;
  min-width: 15%;
  max-width: 100%;
  max-height: 80vh;
  overflow-y: auto;
  word-wrap: break-word;
}

.viewsSection {
  display: flex;
  justify-content: space-between;
  padding: 10px;
  background-color: rgba(248, 248, 248, 0.8);
  border-bottom: 1px solid #ddd;
}

.viewsSection a {
  text-decoration: none;
  display: flex;
  align-items: center;
}

.viewsSection a svg {
  margin-right: 8px;
  font-size: 1.2rem;
}

.viewsSection a:hover {
  color: var(--link-color)
}

.projects {
}

.hotSpot {
  cursor: pointer;
  font-weight: var(--font-weight-bold);
  color: black;
  margin: 0.75em 0;
}

.navMenu ul {
  font-weight: var(--font-weight-semibold);
  list-style: none;
  padding: 0;
  margin: 0;
}

.hotSpot ul {
  margin-left: 1em;
  border-left: solid 1px rgba(204, 204, 204, 0.5);
}

.navMenu li a {
  display: block;
  padding: 0.25em 0.75em;
}

.navMenu a {
  text-decoration: none;
  color: black;
}

.navMenu ul li {
  position: relative;
}

.navMenu li a {
  display: block;
  width: 100%;
  height: 100%;
}

.navMenu ul li a.unvisited {
  color: var(--link-color)
}

.navMenu ul li a.unvisited:hover {
  color: var(--link-hover-color)
}

.buttonContainer {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin: 10px;
}

.iconButton {
  background-color: rgba(204, 204, 204, 0.8);
  border: none;
  border-radius: 50%;
  padding: 8px;
  cursor: pointer;
  margin: 8px;
  transition: background-color 0.1s ease;
}

.iconButton:hover {
  background-color: var(--link-hover-color)
}

.iconButton svg {
  font-size: 1.2rem;
}

/* Styling für den Abschnitt der statischen Links */
.staticLinks {
  margin: 5px 0;
  display: flex;
  flex-direction: column;
}

.staticLinks a {
  font-weight: var(--font-weight-bold);
  padding: 10px;
  text-decoration: none;
  border-bottom: 1px solid #ddd;
}

.legals {
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: rgba(248, 248, 248, 0.8);
  padding: 10px;
}

/* Trennstrich zwischen den Links */
.separator {
  width: 1px;
  height: 20px;
  background-color: #ddd;
  margin: 0 10px;
}

@media (max-width: 600px) {
  .navMenu {
    right: 5px;
    left: 5px;
    width: 90%;
    margin: 0 auto;
  }

  .navMenu li {
    padding: 5px;
  }
}

